--- a/src/pages/home-passageiro-responsavel/home-passageiro-responsavel.html
+++ b/src/pages/home-passageiro-responsavel/home-passageiro-responsavel.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the HomeMotoristaPage page.
+  Generated template for the HomePassageiroResponsavelPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>home-motorista</ion-title>
+    <ion-title>home-passageiro-responsavel</ion-title>
   </ion-navbar>
 
 </ion-header>
