--- a/src/pages/tipo-usuario/tipo-usuario.html
+++ b/src/pages/tipo-usuario/tipo-usuario.html
@@ -1,3 +1,8 @@
+<ion-header>
+        <ion-navbar>
+          <ion-title>Star</ion-title>
+        </ion-navbar>
+      </ion-header>
 <ion-content>
     <ion-card-header text-center style="background-color: rgb(179, 240, 176)">
       O que você é?
