--- a/src/pages/home-motorista/home-motorista.html
+++ b/src/pages/home-motorista/home-motorista.html
@@ -1,18 +1,6 @@
-<!--
-  Generated template for the HomeMotoristaPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>home-motorista</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
-
-</ion-content>
+<ion-tabs color="verdinho">
+  <ion-tab tabIcon="navigate"  [root]="tab1"></ion-tab>
+  <ion-tab tabIcon="bookmarks"  [root]="tab2"></ion-tab>
+  <ion-tab tabIcon="document"  [root]="tab3"></ion-tab>
+  <ion-tab tabIcon="person"  [root]="tab4"></ion-tab>
+</ion-tabs>
