--- a/src/pages/home-passageiro-responsavel/home-passageiro-responsavel.html
+++ b/src/pages/home-passageiro-responsavel/home-passageiro-responsavel.html
@@ -1,6 +1,6 @@
-<ion-tabs>
-    <ion-tab tabIcon="water" tabTitle="Water" [root]="tab1"></ion-tab>
-    <ion-tab tabIcon="leaf" tabTitle="Life" [root]="tab2"></ion-tab>
-    <ion-tab tabIcon="flame" tabTitle="Fire" [root]="tab3"></ion-tab>
-    <ion-tab tabIcon="magnet" tabTitle="Force" [root]="tab4"></ion-tab>
+<ion-tabs color="verdinho">
+    <ion-tab tabIcon="navigate"  [root]="tab1"></ion-tab>
+    <ion-tab tabIcon="bookmarks"  [root]="tab2"></ion-tab>
+    <ion-tab tabIcon="document"  [root]="tab3"></ion-tab>
+    <ion-tab tabIcon="person"  [root]="tab4"></ion-tab>
 </ion-tabs>
