--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -5,7 +5,7 @@
       <ion-thumbnail padding>
           <img text-center  src={{urlImagem}}>
       </ion-thumbnail>
-      <h4>Sampaio</h4>
+      <h4>{{usuario.nome}}</h4>
   </ion-row>
 </ion-grid>
 </ion-content>
