--- a/src/pages/diario/diario.html
+++ b/src/pages/diario/diario.html
@@ -2,7 +2,7 @@
 <ion-header>
 
   <ion-navbar text-center color="verdinho">
-    <ion-title>Diário</ion-title>
+    <ion-title>Diário de Bordo</ion-title>
   </ion-navbar>
 
 </ion-header>
