--- a/src/pages/documentos/documentos.html
+++ b/src/pages/documentos/documentos.html
@@ -5,7 +5,7 @@
     <ion-title>Documentos</ion-title>
   </ion-navbar>
   <ion-toolbar no-border-top color="verdinho">
-    <ion-segment [(ngModel)]="first" color="dark">
+    <ion-segment [(ngModel)]="first" color="light">
       <ion-segment-button value="documentos">
         Documentos
       </ion-segment-button>
