--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -2,14 +2,25 @@
 <ion-grid style="height: 100%">
   <ion-row style="height: 100%;" justify-content-center align-items-center>
       <ion-row  justify-content-center>
-
+<!-- 
                     <h4 ion-col col-5 text-right align-self-center>Olá</h4>
                     <ion-thumbnail ion-col col-7 padding align-self-center>
                         <img src={{urlImagem}}>
-                    </ion-thumbnail>
+                    </ion-thumbnail> -->
            
-            <h4 ion-col col-12 text-center>{{usuario.nome}}</h4>
-            <label *ngIf="acessoMobile.tipoUsuario == 1">Van: {{van.modelo}}, Placa: {{van.placa}}</label>
+            <h4 ion-col col-12 text-center>Olá {{usuario.nome}}</h4>
+
+                    <ion-thumbnail align-self-center ion-col col-5 text-center>
+                            <img   src={{urlImagem}}>
+                    </ion-thumbnail>          
+      </ion-row>
+      <ion-row ion-card justify-content-center *ngIf="acessoMobile.tipoUsuario == 1">
+
+                <ion-item no-lines>
+                        <ion-icon name="bus" item-left large ></ion-icon>
+                        <h2>Van: {{van.modelo}}</h2>
+                        <p>Placa: {{van.placa}}</p>
+                      </ion-item>
       </ion-row>
       
   </ion-row>
