--- a/src/pages/rotas/rotas.html
+++ b/src/pages/rotas/rotas.html
@@ -22,13 +22,13 @@
                 </ion-item>
                 <ion-row text-center>
                     <ion-col>
-                        <button ion-button icon-rigth clear color="primary" small>
+                        <button ion-button icon-left clear color="primary" small>
                           <ion-icon name="map"></ion-icon>
                           <div>Itinerário</div>
                         </button>
                       </ion-col>
                    <ion-col>
-                     <button ion-button icon-rigth clear color="danger" small>
+                     <button ion-button icon-left clear color="danger" small>
                        <ion-icon name="play"></ion-icon>
                        <div>Finalizar</div>
                      </button>
