doc e men arrumados

--- a/src/pages/conteudo-documento/conteudo-documento.html
+++ b/src/pages/conteudo-documento/conteudo-documento.html
@@ -11,12 +11,10 @@
 <ion-content padding>
     <ion-card>     
         <ion-card-header text-center>
-            Documento Padrão - 2018
+            {{documento.titulo}}
           </ion-card-header>
           <ion-card-content>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lorem est, pellentesque nec nisi sed, condimentum ultricies lacus. Donec sit amet lacus ut purus faucibus dictum. Fusce pellentesque congue aliquam. Suspendisse ac orci a eros lobortis maximus nec ac ex. In fermentum cursus felis vel luctus. Morbi non imperdiet ipsum. Sed porttitor pulvinar elit a dapibus.
-                
-                Sed interdum felis at lacus aliquam, eu convallis ex sollicitudin. In lectus quam, porta at nisl et, blandit faucibus ipsum. Proin convallis aliquet pellentesque. Vestibulum dapibus arcu eget lectus semper elementum. Phasellus tristique urna vel porta facilisis. Nunc magna sem, cursus non ex quis, bibendum porttitor erat. Vestibulum eu felis suscipit, porttitor erat sit amet, auctor ante. Sed lobortis magna quis ex rutrum mattis. Ut urna nulla, posuere eleifend eleifend sit amet, laoreet nec metus. Cras et purus vehicula, placerat erat et, euismod urna. Phasellus placerat, augue eu pharetra fermentum, ipsum dui finibus quam, id tincidunt lorem libero nec tellus.</p>
+            <p>{{documento.dados}}</p>
           </ion-card-content>
         
         </ion-card>
