arrumado check in

--- a/src/pages/diario-seleciona-passageiro/diario-seleciona-passageiro.html
+++ b/src/pages/diario-seleciona-passageiro/diario-seleciona-passageiro.html
@@ -10,19 +10,12 @@
 <ion-content>
 
     <ion-list inset no-lines text-center>
-        <button ion-item (click)="diarioHistorico()">
+        <button *ngFor="let item of listaPassageiros" ion-item (click)="diarioHistorico()">
             <ion-avatar item-start>
               <img src={{urlImagem}}>
             </ion-avatar>
-            <h2 text-wrap>Matheus Malinovski</h2> 
-            <p><strong>CPF: </strong>095.990.769-66</p>
-        </button> 
-        <button ion-item (click)="diarioHistorico()">
-            <ion-avatar item-start>
-              <img src={{urlImagem}}>
-            </ion-avatar>
-            <h2 text-wrap>Isadora Belato</h2> 
-            <p><strong>CPF: </strong>165.910.215-23</p>
-        </button> 
+            <h2 text-wrap>{{item.nome}}</h2> 
+            <p><strong>CPF: </strong>{{item.cpf}}</p>
+        </button>
       </ion-list>
 </ion-content>
